# MicroEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.CMake/: Platform.cmake
.github/: pull_request_template.md
.github/CI/: build-config.sh  pre-build.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci_dev.yml  ci_master.yml
Source/: GameTypes.h  Main.cpp  Source.cmake
Source/Game/: BuildVersion.h.in  GameTypes.h  NoCopy.h
Source/Game/Engine/: GFX.cpp  GFX.h  GameServices.cpp  GameServices.h  Handles.h  SFTypes.h
Source/Game/Engine/Input/: Input.cpp  Input.h  InputDataFrame.cpp  InputDataFrame.h  InputHandler.cpp  InputHandler.h  InputMappings.h  InputStateMachine.cpp  InputStateMachine.h  KeyboardInput.cpp  KeyboardInput.h
Source/Game/Engine/Physics/: Collider.cpp  Collider.h  ColliderData.cpp  ColliderData.h  Physics.cpp  Physics.h
Source/Game/Engine/Rendering/: Colour.cpp  Colour.h  LayerIDs.h  Primitive.cpp  Primitive.h  PrimitiveData.h  Renderer.cpp  Renderer.h  Spritesheet.cpp  Spritesheet.h
Source/Game/Engine/Resources/: Resource.cpp  Resource.h  Resources.cpp  Resources.h
Source/Game/Engine/Viewport/: Viewport.cpp  Viewport.h  ViewportData.cpp  ViewportData.h
Source/Game/Factory/: Factory.h
Source/Game/GameContext/: GameContext.cpp  GameContext.h  GameInit.cpp  GameInit.h  GameObjectBase.cpp  GameObjectBase.h  ObjectPool.cpp  ObjectPool.h
Source/Game/GameContext/Objects/: AnimatedSprite.cpp  AnimatedSprite.h  Bubble.h  Chaser.h  Collision.cpp  Collision.h  Controller.cpp  Controller.h  GameObject.cpp  GameObject.h  Projectile.cpp  Projectile.h  Rocket.cpp  Rocket.h  Tilemap.cpp  Tilemap.h
Source/Game/GameContext/Objects/Tutorials/: Bubble.cpp  Bubble.h  Chaser.cpp  Chaser.h  Controller.cpp  Controller.h  Food.cpp  Food.h  Projectile.cpp  Projectile.h  Rocket.cpp  Rocket.h
Source/Game/GameContext/Objects/UI/: UIButton.cpp  UIButton.h  UICheckbox.cpp  UICheckbox.h  UIWidget.cpp  UIWidget.h
Source/Game/GameContext/Utility/: SpriteSheet.h
Source/Game/GameContext/Worlds/: DemoWorld.cpp  DemoWorld.h  GameWorld.cpp  GameWorld.h  Intro.cpp  Intro.h  RocketBattle.cpp  RocketBattle.h  Worlds.h
Source/Game/GameContext/Worlds/Tutorials/: Temp.cpp  Temp.h  Tutorial0.cpp  Tutorial0.h  Tutorial1.cpp  Tutorial1.h  Tutorial2.cpp  Tutorial2.h  Tutorial3.cpp  Tutorial3.h  Tutorial4.cpp  Tutorial4.h  Tutorial5.cpp  Tutorial5.h  Tutorial6.cpp  Tutorial6.h  TutorialKing.cpp  TutorialKing.h
Source/Game/GameLoop/: App.cpp  App.h  GameLoop.cpp  GameLoop.h  GameSettings.cpp  GameSettings.h  OS.cpp  OS.h
Source/Game/GameWorld/: GameWorld.h
Tools/: build.sh  clang-format.sh  clean.sh  os.sh  run_clang_format.sh
